fix the view and change date to readable date

--- a/styles/meet.scss
+++ b/styles/meet.scss
@@ -16,6 +16,7 @@ body {
       list-style-type: none;
       position: relative;
       width: 6px;
+      height:30vh;
       margin: 0 auto;
       padding-top: 50px;
       background: #fff;
@@ -27,13 +28,14 @@ body {
         transform: translateX(-50%) rotate(45deg);
         width: 20px;
         height: 20px;
-        z-index: 0;
         background: #eee;
-      }
+        }
+      
       div {
-        position: relative;
+        position: absolute;
         bottom: 0;
         width: 400px;
+        height:100%;
         padding: 20px;
         border-radius: 5px;
         display: flex;
@@ -60,11 +62,6 @@ body {
       &:nth-of-type(odd) {
         > div {
           left: 45px;
-        }
-      }
-      &:nth-of-type(even) {
-        > div {
-          left: -439px;
         }
       }
     }
